--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # This file is a donensed form of pip freeze and was generated using pipdeptree
-# and the following command
+# and the following command. To remove versions, include the cut
+# command portion:
 #   pipdeptree --warn silence --local-only --freeze --depth 0 | cut -d "=" -f 1
 #
 # See more on its usage here:
@@ -16,8 +17,9 @@
 # See more here:
 #   https://www.ibm.com/docs/sk/aix/7.1?topic=c-cut-command
 
-connexion
-Flask
-pipdeptree
-setuptools
-swagger_ui_bundle
+# NOTE: Versions are included to ensure a working version of this project
+blinker==1.8.2
+connexion==2.14.1
+pipdeptree==2.22.0
+setuptools==68.2.2
+swagger-ui-bundle==0.0.9
