--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@
 # NOTE: Versions are included to ensure a working version of this project
 connexion==2.14.1
 flask-marshmallow==0.14.0
+marshmallow-sqlalchemy==1.0.0
 pipdeptree==2.22.0
 setuptools==68.2.2
-SQLAlchemy==2.0.30
 swagger-ui-bundle==0.0.9
